--- a/docusaurus/src/css/theme.css
+++ b/docusaurus/src/css/theme.css
@@ -94,6 +94,18 @@ pre .token {
     justify-content: space-between;
 }
 
+.margin-top--3 {
+    margin-top: 3rem;
+}
+
+[class*="sidebar_"] {
+    padding-top: 3rem;
+}
+
+/*[class*="sidebar_"] > nav {
+    padding-top: 0;
+}*/
+
 .main-wrapper {
     animation: fade-in 0.5s ease-out;
 }
