--- a/docusaurus/src/css/theme.css
+++ b/docusaurus/src/css/theme.css
@@ -40,6 +40,22 @@ h6 {
     display: none;
 }
 
+.hero__title {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    font-size: 4rem;
+    color: var(--text-color);
+    margin-bottom: 2rem;
+}
+
+#logo {
+    height: 5rem;
+    width: auto;
+    object-fit: contain;
+    margin: 0 1rem;
+}
+
 [class*="codeBlockContainer_"] {
     box-shadow: none;
     border-radius: 10px;
